EDSC-270: Fix dataset hiding on narrow screens

--- a/app/assets/stylesheets/modules/master_overlay.css.scss
+++ b/app/assets/stylesheets/modules/master_overlay.css.scss
@@ -53,7 +53,6 @@
 .master-overlay-main {
   background-color: $master-overlay-main-bg-color;
   width: 40%;
-  min-width: 35em;
   left: 20%;
   overflow: hidden;
 }
